--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="./static/bootstrap/js/bootstrap.js"></script>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>考研服务网站</title>
   </head>
   <body>
     <div id="app"></div>
